--- a/package.json
+++ b/package.json
@@ -5,21 +5,33 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next build && next start",
+    "test": "playwright test",
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.8.0",
     "@types/node": "20.8.2",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.8",
     "autoprefixer": "10.4.16",
+    "date-fns": "^2.29.3",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
     "next": "13.5.3",
+    "next-auth": "^4.18.6",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "zod": "^3.20.2",
+    "zustand": "^4.1.5"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.29.0",
+    "prisma": "^4.8.0"
   }
 }
